added confirm dialog for ovwewriting files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
   padding-left: 5px;
-  font: 1em "Lucida Grande", Helvetica, Arial, sans-serif !important;
+  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif !important;
   /* background-color:#e4e6e8; */
   height:100%;
 }
