--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -14,7 +14,7 @@
     min-width: 200px;
     overflow: auto;
     scroll-behavior: smooth;
-
+    scrollbar-width: thin !important;
 }
 
 #sidebar .ui.accordion .content {
@@ -23,6 +23,18 @@
 
 #sidebar .ui.accordion .title {
     background-color: transparent !important;
+}
+
+::-webkit-scrollbar {
+    /* height: 12px; */
+    width: 5px;
+    /* background: #cfcfcf; */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #393812;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
 }
 
 
@@ -57,7 +69,7 @@
   }
 
   aside.sidebar#resizable {
-    height: 100vh;
+    height: 100% !important;
     /* min-width: 0px; */
   }
 
@@ -97,15 +109,15 @@
   aside.sidebar-left .draghandle {
     position: absolute;
     z-index: 100;
-    width: 5px;
-    min-height: 100%;
-    height:auto !important;
-    /* height:200% !important; */
+    width: 4px;
+    /* min-height: 100%; */
+    /* height: auto !important; */
+    height:1000% !important;
     top: 0;
     right: 0;
     cursor: col-resize;
     float: right;
-    background-color: #444444;
+    background-color: #222222;
   }
 
   .draghandle:hover {
@@ -143,7 +155,7 @@
     z-index: 1;
   }
 
- 
+
 
   /* .drag_bar {
     width: 1px;
