--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,11 +448,12 @@ body {
 }
 
 #progress{
-  /* background:rgb(0, 0, 0);
+  /* background:rgb(0, 0, 0); */
   position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 1000; */
+  bottom: 0;
+  /* top: 50%; */
+  /* left: 50%; */
+  z-index: 1000;
 }
 
 
