copy paste updates. fixed issues with card creation. removed find until it gets reworked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,6 +616,16 @@ body .ui.card .none{
     /* background:#000000 !important; */
 }
 
+embed {
+    overflow: hidden;
+    width: 100%;
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;
+
+
+}
+
 .image:hover{
     cursor: pointer;
 }
