--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -911,13 +911,14 @@ h5 {
     position: relative;
     outline: none;
     border: none;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-bottom: 150px;
     margin-right: 0px;
     height: 100%;
     margin-left: 0px;
     overflow-x: hidden;
     overflow-y: scroll;
+    /* padding: 10px; */
     padding-bottom: 40px;
     z-index: 0;
 }
@@ -928,6 +929,11 @@ h5 {
 
 #main_view a {
     text-decoration: underline !important;
+}
+
+#info_view {
+    margin-right: 110px !important;
+    margin-top: 20px;
 }
 
 .card:focus {
