--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -25,7 +25,7 @@
     }
 
     #sidebar a {
-        color: #808080 !important;
+        color: rgb(65, 131, 196, 0.8) !important;
     }
 
     .ui.accordion .title:not(.ui) {
@@ -163,7 +163,7 @@
     position: absolute;
     z-index: 100;
     width: 4px;
-    height:200% !important;
+    /* height:200% !important; */
     top: 0;
     right: 0;
     cursor: col-resize;
