--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -13,11 +13,20 @@
         height:100%;
         padding-top:10px;
         padding-left: 12px;
-        min-width: 200px;
+        /* min-width: 200px; */
         overflow: scroll;
         scroll-behavior: smooth;
         /* scrollbar-width: 2px !important; */
         /* scrollbar-width: thin; */
+    }
+
+    #minibar {
+        margin-left: -2px;
+        padding: 10px;
+        width: 50px;
+        float:left;
+        background-color: #222222;
+        height:110%
     }
 
     #sidebar .title {
@@ -55,6 +64,15 @@
         min-width: 200px;
         overflow: scroll;
         scroll-behavior: smooth;
+    }
+
+    #minibar {
+        margin-left: -2px;
+        padding: 10px;
+        width: 50px;
+        float:left;
+        background-color: #cfcfcf;
+        height:100%
     }
 
     .ui.accordion .title {
