--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,10 @@ body {
         height: 22px !important;
     }
 
+    #workspace_content .ui.card {
+        background: transparent !important;
+    }
+
     /* .input:focus {
         -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(0, 140, 255);
         box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(0, 140, 255);
