--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+/* 
+html {
+    font-size: 100%
+} */
+
 body {
   padding-left: 5px;
-  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif !important;
+  font: 0.8em "Lucida Grande", Helvetica, Arial, sans-serif !important;
   height:100%;
 }
 
