--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -11,13 +11,56 @@
         color: #f7f7f7 !important;
         /* top: 40px; */
         height:100%;
-        padding-top:10px;
-        padding-left: 12px;
+        padding-top: 6px;
+        padding-left: 6px;
+        margin-left: 40px;
         /* min-width: 200px; */
         overflow: scroll;
         scroll-behavior: smooth;
         /* scrollbar-width: 2px !important; */
         /* scrollbar-width: thin; */
+    }
+
+    #sidebar .title {
+        color: #cfcfcf !important;
+    }
+
+    #sidebar a {
+        color: rgb(65, 131, 196, 0.8) !important;
+    }
+
+    #sidebar_items .header {
+        /* background-color: #3a3a3a; */
+        border-radius: 4px;
+        padding: 4px;
+
+    }
+
+    #sidebar_items .item {
+        width: 100%;
+        padding: 4px;
+    }
+
+    #sidebar_items .item:hover {
+        width: 100%;
+        background-color: #425261;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    #sidebar_items a {
+        color: #cfcfcf !important;
+    }
+
+    #sidebar_items input {
+        /* width: 100%; */
+        height: 20px;
+        background-color: #454545;
+        color: #cfcfcf;
+    }
+
+    #sidebar_items label {
+        font-size: .75em !important;
     }
 
     #minibar {
@@ -29,12 +72,20 @@
         height:110%
     }
 
-    #sidebar .title {
-        color: #cfcfcf !important;
+    #minibar .item {
+        width: 23px;
+        height: 23px;
+        color: #464646 !important;
     }
 
-    #sidebar a {
-        color: rgb(65, 131, 196, 0.8) !important;
+    #minibar .item:hover {
+        color: #cfcfcf !important;
+        cursor: pointer;
+    }
+
+    #sb_find_input {
+        color: #cfcfcf;
+        background:rgba(0, 0, 0, 0.75)
     }
 
     #file_properties {
@@ -71,6 +122,7 @@
         height:100%;
         padding-top:10px;
         padding-left: 12px;
+        margin-left: 40px;
         min-width: 200px;
         overflow: scroll;
         scroll-behavior: smooth;
@@ -101,6 +153,17 @@
     #sidebar a {
         color: #2f2f2f !important;
         font-weight: normal !important;
+    }
+
+    #sidebar_items .header {
+        background-color: #cfcfcf;
+        border-radius: 4px;
+        padding: 4px;
+
+    }
+
+    #sidebar_items .item {
+        padding: 8px;
     }
 
     #workspace_grid a {
@@ -144,8 +207,8 @@
 }
 
 #sidebar .header {
-    margin-left:15px !important;
-    margin-top: 2px !important;
+    /* margin-left:15px !important; */
+    /* margin-top: 2px !important; */
 }
 
   /* .ui.accordion .title:not(.ui) {
