--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   padding-left: 5px;
-  font: 0.75em "Lucida Grande", Helvetica, Arial, sans-serif !important;
+  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif !important;
   height:100%;
 }
 
@@ -82,10 +82,10 @@ body {
         padding-top:20px;
     } */
 
-    .tree_item {
+    /* .tree_item {
         margin-top: 15px !important;
         margin-left: 15px !important;
-    }
+    } */
 
     .tree_subicon {
         /* margin-top:2px !important; */
@@ -102,9 +102,9 @@ body {
         height: 22px !important;
     }
 
-    #workspace_content .ui.card {
+    /* #workspace_content .ui.card {
         background: transparent !important;
-    }
+    } */
 
     /* .input:focus {
         -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(0, 140, 255);
@@ -1007,7 +1007,7 @@ h5 {
 
 input[type=text], input[type=date],  textarea, .dd {
     width: 100% !important;
-    height: 23px;
+    height: 20px;
     border-radius: 4px;
     /* color:#cfcfcf; */
     /* background:#425261 !important; */
@@ -1343,7 +1343,6 @@ textarea {
   }
 
 }
-
 
 #statusbar {
     background-color: rgb(0, 122, 204, .75);
